# youtube_downloader_gui

./: .gitignore  AGENTS.md  LICENSE  README.md  apt-packages.txt  calculate_py_total.sh  plan.md  proj_reinstall.sh  pyproject.toml  reflex_rerun.sh  requirements.txt  rxconfig.py
youtube_downloader_gui/: youtube_downloader_gui.py
youtube_downloader_gui/components/: header.py  input_panel.py  results_panel.py
youtube_downloader_gui/states/: yt_state.py
